--- a/src/assets/light-theme.scss
+++ b/src/assets/light-theme.scss
@@ -6,7 +6,11 @@ $light-theme: mat.define-light-theme((
   color: (
     primary: mat.define-palette(mat.$indigo-palette),
     accent: mat.define-palette(mat.$pink-palette),
+    background:(background:red),
   ),
   typography: mat.define-typography-config(),
   density: 0,
 ));
+
+
+
